[FIX] mail: message actions mobile mailbox easier to use
Before this commit, message actions are placed based on the
type of message and its content:

- when message has bubble layout, they are placed next to the 1st
  line of bubble
- when message contains only attachments, they are placed next to
  the start of 1st attachment row
- otherwise, they are placed next to message header

The last case is a last resort which happens in non-discuss
channels such as logged notes or tracking values and so on.
All of them do not have "squashed" messages and the best natural
placement is there in header. Message header is intended to be thin
in content, so that it doesn't overpower with message content.
However, message actions need to be big enough to be reached with a
thumb. These considerations led to a compromise of thin header with
message actions with negative margins.

This works well when message header is on a single line, but when
it wraps to new line this doesn't look good because the negative
margin puts it partially inside the header content.

This commit fixes the issue by changing the placement of message
actions in mobile when displayed as a card, like on Inbox and
History: the "..." is moved to the top-right corner of card.

This works because the card layout makes the top-right corner a
natural position. This make it work like kanban views.

Note that this placement is best only in mobile: the card are
short in width to make reaching message actions easy. In desktop,
the message card can take almost the width of screen, so it makes
it less practical than currently, close to message content.

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -178,6 +178,10 @@
 .o-mail-Message-openActionMobile {
     opacity: 10% !important;
 
+    .o-mail-Message.o-card & {
+        opacity: 15% !important;
+    }
+
     &:active {
         opacity: 75% !important;
     }
